# Gamebox

./: Minecraft.cpp  README.md
SpriteEditor/: CMakeLists.txt  README.md  main.cpp  palette.cpp  palette.h  sprite.cpp  sprite.h  window.cpp  window.h
VirtualGameBox/: AVR.cpp  AVR.h  AVRIO.cpp  AVRIO.h  AVRRegister.h  AVRRegisterBank.cpp  AVRRegisterBank.h  CMakeLists.txt  MAPPING  Window.cpp  Window.h  atmega2560.h  main.cpp
VirtualGameBox/periph/: AVRGPIO.cpp  AVRGPIO.h  AVRTimer16.cpp  AVRTimer16.h  AVRTimer8.cpp  AVRTimer8.h  Display.cpp  Display.h
game/: Artyomgame.cpp  BackspaceInvaders.cpp  BreakOut.cpp  ColorDemo.cpp  DoodleJump.cpp  Dump.cpp  Flappy.cpp  Ghostbuster.cpp  LodeRunner.cpp  Makefile  Mario.cpp  Minecraft.cpp  NY2019.cpp  Player.cpp  Raycaster.cpp  Saper.cpp  Snail.cpp  Snake.cpp  Snake2.cpp  SpaceShips.cpp  SpriteDemo.cpp  Template.cpp  Tester.cpp  Tetrisnake.cpp  TicTacToe.cpp  application.cpp  artyomgame.cpp  avr_storage.cpp  config.h  controls.cpp  controls.h  fxm_player.cpp  fxm_tunes.cpp  fxm_tunes.h  game.ino  games.h  graphics.cpp  graphics.h  libgame.h  menu.cpp  (+9 more)
game/qt_emulator/: .gitignore  CMakeLists.txt  main.cpp  renderarea.cpp  renderarea.h  run.sh  window.cpp  window.h
